tests/build/fail/impl_ui_node/delegate_list_expr_error_incorrect_type_children.rs
use zero_ui::core::{impl_ui_node, UiNode};

struct NotANodeList;

struct MyNode {
    children: NotANodeList,
}

#[impl_ui_node(children)]
impl UiNode for MyNode {}

fn main() {}
